# Predicting_Close_Price_Using_NN

./: CMakeLists.txt  EURUSD.csv  README.md  XAUUSD.csv
include/: Activations.h  BatchDataLoader.h  BatchNormLayer.h  CSVReader.h  Layer.h  Loss.h  NeuralNetwork.h  Utils.h
src/: Activations.cpp  BatchDataLoader.cpp  BatchNormLayer.cpp  CSVReader.cpp  Layer.cpp  Loss.cpp  NeuralNetwork.cpp  Utils.cpp  main.cpp
